--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<!--<div class="div1">-->
+	<div class="div1">
 		<p>Programação Comercial</p>	
-	<!--</div>-->
+	</div>
+
+	<div class="div2">
+		<p>Trabalho v1.0RC</p>	
+	</div>
 </body>
 </html>
