--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Projeto Programação Comercial</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<!--<meta charset="utf-8"> Sem codificação-->
+	<!--<link rel="stylesheet" type="text/css" href="style.css">-->
 </head>
 <body>
 	<!--<div class="div1">-->
