--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Projeto Programação Comercial</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<!--<link rel="stylesheet" type="text/css" href="style.css">-->
 </head>
 <body>
 	<!--<div class="div1">-->
@@ -11,3 +11,5 @@
 	<!--</div>-->
 </body>
 </html>
+
+<!--Commit inicial-->
